# xap-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: crewai_demo.py  langchain_demo.py  manifest_demo.py  mcp_demo.py  stripe_test_mode.py  three_agent_split.py  two_agent_demo.py  unknown_outcome.py
npm/: README.md  package.json
static/: agent.txt
static/.well-known/: agent.txt
tests/: test_adapter_registry.py  test_adapters.py  test_builders.py  test_clients.py  test_crypto.py  test_demo.py  test_external_adapter.py  test_integration.py  test_integrations.py  test_manifest.py  test_manifest_invalid.py  test_mcp_server.py  test_mcp_v02.py  test_schemas.py  test_state_machines.py  test_stripe_adapter.py  test_types.py
xap/: __init__.py  client.py  crypto.py  errors.py  manifest.py  types.py  verify.py
xap/adapters/: __init__.py  base.py  external.py  registry.py  stripe_adapter.py  stripe_webhooks.py  test_adapter.py
xap/builders/: __init__.py  identity.py  negotiation.py  receipt.py  registry.py  settlement.py  verity.py
xap/clients/: __init__.py  discovery.py  negotiation.py  receipt.py  settlement.py
xap/data/schemas/: agent-identity.json  agent-manifest.json  execution-receipt.json  negotiation-contract.json  registry-query.json  registry-response.json  settlement-intent.json  verity-receipt.json
xap/integrations/: __init__.py  base.py  crewai.py  langchain.py
xap/mcp/: __init__.py  server.py  setup.py
xap/schemas/: __init__.py  loader.py  validator.py
xap/state_machines/: __init__.py  negotiation.py  outcome.py  settlement.py
