[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xap-sdk"
version = "0.2.0"
description = "XAP Protocol SDK — Settlement objects for autonomous agent commerce"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Agentra Labs", email = "dev@agentralabs.tech"}
]
keywords = ["ai", "agents", "protocol", "settlement", "autonomous", "commerce", "xap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "jsonschema>=4.20",
    "pynacl>=1.5",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/agentralabs/xap-sdk"
Documentation = "https://github.com/agentralabs/xap-sdk#quickstart"
Repository = "https://github.com/agentralabs/xap-sdk"
Issues = "https://github.com/agentralabs/xap-sdk/issues"
Protocol = "https://github.com/agentralabs/xap-protocol"

[tool.setuptools.packages.find]
include = ["xap*"]

[tool.setuptools.package-data]
"xap.data.schemas" = ["*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
