[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xap-sdk"
version = "0.4.0"
description = "XAP Protocol SDK — Settlement objects for autonomous agent commerce"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Agentra Labs", email = "dev@agentralabs.tech"}
]
keywords = ["ai", "agents", "protocol", "settlement", "autonomous", "commerce", "xap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "jsonschema>=4.20",
    "pynacl>=1.5",
    "pydantic>=2.0",
]

[project.optional-dependencies]
mcp = ["mcp>=0.1"]
stripe = ["stripe>=7.0"]
langchain = ["langchain>=0.1"]
crewai = ["crewai>=0.1"]
all = ["mcp>=0.1", "stripe>=7.0", "langchain>=0.1", "crewai>=0.1"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "mcp>=0.1",
    "httpx>=0.24",
    "cryptography>=41.0",
]

[project.scripts]
xap-mcp = "xap.mcp.server:main_cli"

[project.urls]
Homepage = "https://github.com/agentra-commerce/xap-sdk"
Documentation = "https://github.com/agentra-commerce/xap-sdk#quickstart"
Repository = "https://github.com/agentra-commerce/xap-sdk"
Issues = "https://github.com/agentra-commerce/xap-sdk/issues"
Protocol = "https://github.com/agentra-commerce/xap-protocol"

[tool.setuptools.packages.find]
include = ["xap*"]

[tool.setuptools.package-data]
"xap.data.schemas" = ["*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
